<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"       
    android:layout_width="fill_parent"    
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/videorecord"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:src="@drawable/record"
            android:scaleType="centerInside"
            android:layout_centerVertical="true"
            android:background="#00000000"/>
        <ImageButton
            android:id="@+id/came"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:src="@drawable/camera"
            android:scaleType="centerInside"
            android:layout_centerVertical="true"
            android:background="#00000000"/>
        <ImageButton
            android:id="@+id/position"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:src="@drawable/position"
            android:scaleType="centerInside"
            android:layout_centerVertical="true"
            android:background="#00000000"
            />
        <ImageButton
            android:id="@+id/vibrate"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:src="@drawable/move"
            android:scaleType="centerInside"
            android:layout_centerVertical="true"
            android:background="#00000000"
            />
        <ImageButton
            android:id="@+id/teach"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:src="@drawable/teach"
            android:scaleType="centerInside"
            android:layout_centerVertical="true"
            android:background="#00000000"/>
        <ImageButton 
            android:id="@+id/info"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:src="@drawable/info"
            android:scaleType="centerInside"
            android:layout_centerVertical="true"
            android:background="#00000000"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/videorecord"/>
        <TextView 
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/came"/>
        <TextView 
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/position"/>
        <TextView 
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/vibrate"/>
        <TextView 
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/teach"/>
        <TextView 
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/info"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/videolist"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:src="@drawable/play"
            android:scaleType="centerInside"
            android:layout_centerVertical="true"
            android:background="#00000000"/>
        <ImageButton
            android:id="@+id/btnlight"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:src="@drawable/light"
            android:scaleType="centerInside"
            android:layout_centerVertical="true"
            android:background="#00000000"/>
        <ImageButton
            android:id="@+id/calendar"
           android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:src="@drawable/calendar"
            android:scaleType="centerInside"
            android:layout_centerVertical="true"
            android:background="#00000000"/>
        <ImageButton 
            android:id="@+id/set"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:src="@drawable/set"
            android:scaleType="centerInside"
            android:layout_centerVertical="true"
            android:background="#00000000"/>
        <ImageButton
            android:id="@+id/about"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:src="@drawable/about"
            android:scaleType="centerInside"
            android:layout_centerVertical="true"
            android:background="#00000000"/>
        <ImageButton
            android:id="@+id/exit"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:src="@drawable/out"
            android:scaleType="centerInside"
            android:layout_centerVertical="true"
            android:background="#00000000"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/videolist"/>
        <TextView 
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/btnlight"/>
        <TextView 
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calendar"/>
        <TextView 
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/set"/>
        <TextView 
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/about"/>
        <TextView 
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/exit"/>
    </LinearLayout>
</LinearLayout>
